      while loading stamps.
      Mark K. Kim <mkkim214@gmail.com>

    * Ability to bring up the print dialog from the macOS build was
      removed in Tux Paint 0.9.23 to support the new build mechanism.
      It has been re-added.  To access it, option-click the print icon,
      or configure Tux Paint to always bring up the dialog upon print.
      Mark K. Kim <mkkim214@gmail.com>

  * Other Improvements
    ------------------
    * Added ability to move color palette options to the end of
      the New dialog, for situations where users are meant to start
      drawings with specific Starters or Templates.
      Use "--newcolorslast" option.
      (Suggested by Bernard Verhaeghe)

    * Recognize signals (SIGUSR1 and SIGUSR2) on POSIX systems,
      which causes Tux Paint to quit, first saving the current drawing
      (if unsaved) (like "--autosave"), either saving a new image
      (like "--saveovernew") (via SIGUSR1), or overwritting the current
      drawing (like "--saveover") (via SIGUSR2).
      (Thanks to Flavio Airundo for the idea; closes
      https://sourceforge.net/p/tuxpaint/feature-requests/188/)

    * Updated most parts of the code that were throwing warnings in GCC.

    * Build process generates thumbnails of included Starters and Templates.
      When installed, this greatly increases the speed of the "New" dialog.

  * Documentation updates
    ---------------------
    * Mended link to MinGW/MSYS instructions at John Popplewell's website.
      (h/t "sechidis")

    * Improved and expanded usage info (e.g., "tuxpaint --help" output)

    * Documentation on POSIX signals recognized by Tux Paint (e.g.,
      the new "SIGUSR1" & "SIGUSR2") added to a new doc file,
      "SIGNALS.txt".

  * Misc
    ----
    * Verbose debugging, and "DEBUG_PRINTF()" macro now available;
      see debugging options in INSTALL.txt.
      Mark K. Kim <mkkim214@gmail.com>

  * Notes:
    ------